# ModernPrj

./: CMakeLists.txt  README.md
.github/workflows/: default-environment-variables.yml  download.yml  echo-GITHUB_ENV.yml  echo-add-mask.yml  echo-debug.yml  echo-example.yml  echo-notice.yml  echo-warning.yml  gcc.yml  github-actions-demo.yml  linux.yml  my-download.yml  my-upload.yml  myoutput.yml  output.yml  save_output.yml  win-default-environment-variables.yml  windows.yml
examples/github_actions/: download02.yml  download04.yml  download05.yml  linux-default-environment-variables.yml  my-download.yml  my-upload.yml  win-default-environment-variables.yml
examples/github_actions/context/: 01.yml  02.yml  03.yml  04.yml
examples/github_actions/echo/: echo-error01.yml
examples/github_actions/echo/GITHUB_ENV/: 02.yml
examples/github_actions/echo/add-mask/: 01.yml  02.yml
examples/github_actions/echo/error/: echo-error02.yml
examples/github_actions/echo/group/: 01.yml
examples/github_actions/echo/job/: 02.yml
examples/github_actions/echo/secret/: 01.yml  02.yml  04.yml
examples/github_actions/vars/: 01.yml
tests/: CMakeLists.txt
